--- a/02-workflow-orchestration/de-zoomcamp/pipelines/green_taxi_etl/metadata.yaml
+++ b/02-workflow-orchestration/de-zoomcamp/pipelines/green_taxi_etl/metadata.yaml
@@ -19,7 +19,7 @@ blocks:
   color: null
   configuration: {}
   downstream_blocks:
-  - green_taxi_load
+  - green_taxi_to_postgres
   - green_taxi_to_gcs
   executor_config: null
   executor_type: local_python
@@ -35,20 +35,22 @@ blocks:
   uuid: green_taxi_transform
 - all_upstream_blocks_executed: true
   color: null
-  configuration: {}
+  configuration:
+    file_source:
+      path: data_exporters/green_taxi_to_postgres.py
   downstream_blocks: []
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
-  name: green_taxi_load
+  name: green_taxi_to_postgres
   retry_config: null
   status: executed
   timeout: null
   type: data_exporter
   upstream_blocks:
   - green_taxi_transform
-  uuid: green_taxi_load
+  uuid: green_taxi_to_postgres
 - all_upstream_blocks_executed: true
   color: null
   configuration: {}
@@ -59,7 +61,7 @@ blocks:
   language: python
   name: green_taxi_to_gcs
   retry_config: null
-  status: not_executed
+  status: updated
   timeout: null
   type: data_exporter
   upstream_blocks:
@@ -86,7 +88,7 @@ settings:
 spark_config: {}
 tags: []
 type: python
-updated_at: '2024-02-03T14:22:13+00:00'
+updated_at: '2024-02-03 15:20:50'
 uuid: green_taxi_etl
 variables_dir: /home/src/mage_data/de-zoomcamp
 widgets: []
